--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "1.0.10"
   },
   "dependencies": {
+    "moment": "^2.18.1",
     "react": "^15.6.1",
+    "react-big-calendar": "^0.16.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
