--- a/package.json
+++ b/package.json
@@ -12,17 +12,16 @@
   "license": "MIT",
   "dependencies": {
     "bcryptjs": "^2.3.0",
-    "boom": "^3.1.2",
+    "boom": "^7.2.0",
     "glob": "^7.0.0",
-    "hapi": "^13.0.0",
+    "hapi": "^16.6.2",
     "hapi-auth-jwt": "^4.0.0",
-    "joi": "^8.0.4",
+    "joi": "^13.3.0",
     "joi-objectid": "^2.0.0",
-    "jsonwebtoken": "^5.7.0",
-    "mongoose": "^4.4.5"
+    "jsonwebtoken": "^8.2.2",
+    "mongoose": "^5.1.4"
   },
   "scripts": {
-    "serve": "source .env && nodemon server.js",
-    "deploy": "cd client && npm run build && mv build/index.html build/200.html && surge build [domain.com]"
+    "serve": "source .env && nodemon server.js"
   }
 }
